add user and video models

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://singhashwin1108:ashwin1108@ashwin.az5rh.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=backend-tutorial
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=backend-tutorial
+REFRESH_TOKEN_EXPIRY=10d
