add register controller and bug fixes

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=backend-tutorial
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=backend-tutorial
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=ddq2asvsh
+CLOUDINARY_API_KEY=316683683364939
+CLOUDINARY_API_SECRET=ucvI9E2KomE2G8CFdoubJzPJqJs
